--- a/src/main/resources/sass/styles.scss
+++ b/src/main/resources/sass/styles.scss
@@ -5,5 +5,7 @@
 $section-padding:  1.8rem 1.5rem;
 $body-background-color:#eeeeee;
 $dropdown-content-z: 50;
+$footer-background-color: #F5F5F5;
+$footer-padding: 3rem 1.5rem 6rem;
 
 @import "../node_modules/bulma/bulma.sass";
