--- a/src/main/resources/templates/layouts/template.html
+++ b/src/main/resources/templates/layouts/template.html
@@ -6,6 +6,7 @@
     <title th:text="${title}">School Management</title>
     <link rel="stylesheet" th:href="@{/css/app.css}" />
     <link rel="stylesheet" th:href="@{/icons/css/all.min.css}" />
+    <link rel="stylesheet" th:href="@{/icons/css/brands.min.css}" />
     <th:block th:replace="${links}" />
 </head>
 <body>
@@ -13,7 +14,9 @@
     <nav th:replace="fragments/menus :: userNavbar"></nav>
     <nav th:replace="fragments/breadcrumb :: breadcrumb(${crumbs})"></nav>
     <th:blick th:replace="${concent}" />
+    <footer th:replace="fragments/footer :: footer"></footer>
     <script th:src="@{/icons/js/all.min.js}"></script>
+    <script th:src="@{/icons/js/brands.min.js}"></script>
     <th:block th:replace="${scripts}" />
 </body>
 </html>
