--- a/src/main/resources/templates/grades/edit.html
+++ b/src/main/resources/templates/grades/edit.html
@@ -11,11 +11,12 @@
                 th:text="${grade.subject.course.name}"></a></li>
         <li><a th:href="@{/subjects/{subjectId}(subjectId=${grade.subject.id})}" th:text="${grade.subject.name}"></a>
         </li>
+        <li><a th:href="@{/grades(sid=${grade.subject.id})}" th:text="#{ui.breadcrumb.grades}"></a></li>
         <li class="is-active"><a th:text="#{ui.breadcrumb.grades.edit}"></a></li>
     </ul>
 
     <section class="section">
-        <div class="container">
+        <div class="container is-fluid">
             <div class="panel is-light">
                 <h1 class="panel-heading" th:text="#{ui.grades.edit.panel.heading}"></h1>
                 <div class="panel-block has-background-white">
