--- a/src/main/resources/templates/grades/show.html
+++ b/src/main/resources/templates/grades/show.html
@@ -14,7 +14,15 @@
     </ul>
 
     <section class="section">
-        <div class="container">
+        <div class="container is-fluid">
+            <div class="notification is-success" th:if="${param.created}">
+                <a class="delete" th:href="@{/grades(sid=${subject.id})}"></a>
+                <span th:text="#{messages.grades.created}"></span>
+            </div>
+            <div class="notification is-success" th:if="${param.updated}">
+                <a class="delete" th:href="@{/grades(sid=${subject.id})}"></a>
+                <span th:text="#{messages.grades.updated}"></span>
+            </div>
             <div class="panel is-light">
                 <h1 class="panel-heading"
                     th:text="#{ui.grades.show.panel.heading(${subject.name}, ${subject.course.name}, ${subject.course.cycle.name})}">
