custom 404, 500 error pages

--- a/src/main/resources/sass/styles.scss
+++ b/src/main/resources/sass/styles.scss
@@ -2,6 +2,10 @@
 
 // customizations
 
+body {
+    height: 100vh;
+}
+
 $section-padding:  1.8rem 1.5rem;
 $body-background-color:#eeeeee;
 $dropdown-content-z: 50;
