--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.springframework.org/security/tags"
     th:replace="layouts/template :: userTemplate(#{ui.home.window.title}, _, ~{::#crumbs}, ~{::section}, _)">
 
 <body>
     <ul id="crumbs">
         <li class="is-active">Inicio</li>
     </ul>
+
     <section class="section">
-        <div class="container">
+        <div class="container" sec:authorize="hasRole('ADMIN')">
             <div class="tile is-ancestor">
                 <div class="tile is-parent">
                     <div class="tile is-child box notification is-primary">
@@ -25,6 +26,60 @@
                     <div class="tile is-child box notification is-success">
                         <p class="title" th:text="#{ui.dashboard.classrooms}"></p>
                         <p class="subtitle" th:text="#{ui.dashboard.classrooms.total(${classrooms})}"></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container" sec:authorize="hasRole('TEACHER')">
+            <div class="columns">
+                <div class="column">
+                    <div class="panel is-link">
+                        <h1 class="panel-heading" th:text="#{ui.dashboard.teacher.courses.panel.heading}"></h1>
+                        <div class="panel-block">
+                            <table class="table is-fullwidth">
+                                <thead>
+                                    <tr>
+                                        <th th:text="#{ui.dashboard.teacher.courses.table.course}"></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr th:each="course : ${teacherCourses}">
+                                        <td th:text="${course.name}"></td>
+                                    </tr>
+                                    <tr th:unless="${teacherCourses.size()} > 0">
+                                        <td colspan="1" class="has-text-centered">
+                                            <span class="has-text-grey" th:text="#{ui.dashboard.teacher.courses.table.empty}"></span>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="panel is-info">
+                        <h1 class="panel-heading" th:text="#{ui.dashboard.teacher.subjects.panel.heading}"></h1>
+                        <div class="panel-block">
+                            <table class="table is-fullwidth">
+                                <thead>
+                                    <tr>
+                                        <th th:text="#{ui.dashboard.teacher.subjects.table.subject}"></th>
+                                        <th th:text="#{ui.dashboard.teacher.subjects.table.classroom}"></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr th:if="${teacherSubjects.size()} > 0" th:each="subject : ${teacherSubjects}">
+                                        <td th:text="${subject.name}"></td>
+                                        <td th:text="${subject.classroom.name}"></td>
+                                    </tr>
+                                    <tr th:unless="${teacherSubjects.size()} > 0">
+                                        <td colspan="2" class="has-text-centered">
+                                            <span class="has-text-grey" th:text="#{ui.dashboard.teacher.subjects.table.empty}"></span>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
